# ZKMock

./: .gitignore  Cargo.toml  Readme.md
src/: circuit.rs  hash_functions.rs  main.rs  merkle.rs  r1cs.rs
